# mcp_audit_compliance_platform

./: .env  .gitignore  A2A_IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  README.md  audit_compliance.db  env.example  main.py  pyproject.toml  requirements.txt  start.py  streamlit_app.py  test_agents.py
src/: __init__.py  config.py  database.py  mcp_client.py  mcp_server.py  mock_a2a.py  tracing.py
src/agents/: __init__.py  base.py  financial_data_agent.py  orchestrator_agent.py  policy_engine_agent.py
